2009-07-28  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (slime-selector): mention t and c keys.

2009-07-27  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (source-note-to-source-location): keys of
	*temp-file-map* are pathnames, not namestrings; convert
	namestrings to pathnames before looking up.

2009-07-27  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp: Support for older ECL installs
	from patch by Mark Evenson

2009-07-26  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-maybe-show-compilation-log): New function.
	(slime-compilation-finished-hook): Use it.  Now that the
	compilation buffer gets not selected it's more acceptable to
	display it more often.
	(slime-insert-compilation-log): Set compilation-skip-threshold to
	0 and compilation-skip-to-next-location to nil.  Seems to work
	better for us.
	(slime-with-popup-buffer): Synch window-point, otherwise it be at
	the end of the buffer for reused buffers.
	(slime-display-popup-buffer): Return the window.

2009-07-26  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (tempnam): Muffle efficiency notes.

2009-07-26  Gail Zacharias <gz@clozure.com>

	* swank-ccl.lisp: New file.  An updated version of
	swank-openmcl.lisp in preparation for a slew of changes to CCL and
	to honor the new name.

	* swank-loader.lisp (*sysdep-files*): Use it.

2009-07-21  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-sexp-at-point-for-macroexpansion): use markers
	for bounds, because in some situations text layout could be modified
	before bounds would be used, for example, using keyboard macros.

2009-07-15  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-inspector-fetch-all): new command, bound to >
	in the inspector buffer.

	* doc/slime.texi (Frame Navigation): add description
	of `sldb-end-of-backtrace' and `sldb-beginning-of-backtrace'.
	(Inspector): add `slime-inspector-fetch-all'.


2009-07-12  Helmut Eller  <heller@common-lisp.net>
